[tool.poetry]
name = "projeto letra musica"
version = "0.1.0"
description = "busca por letras de musica"
authors = ["Kelven Patrick N Barbosa <kelvenpatrick@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.37.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
